--- a/templates/Staff/activity_public_update.html
+++ b/templates/Staff/activity_public_update.html
@@ -16,6 +16,9 @@
                         {{ render_field(form.activity_details, class="form-control", rows="3") }}
                     </div>
                     <div class="form-group">
+                        {{ render_field(form.activity_venue, class="form-control", rows="3") }}
+                    </div>
+                    <div class="form-group">
                         {{ render_field(form.activity_start_datetime, class="form-control") }}
                     </div>
                     <div class="form-group">
