--- a/templates/Staff/account_create.html
+++ b/templates/Staff/account_create.html
@@ -24,6 +24,10 @@
                 {{ render_field(form.email, class="form-control") }}
             </div>
         </div>
-        <input type="submit" value="Create" class="btn btn-primary"/>
+        <button type="submit" class="btn btn-primary">
+                <i class="fas fa-save"></i> Create
+        </button>
+        <a href="{{ url_for('manage_accounts') }}" class="btn btn-secondary ml-2">Cancel</a>
     </form>
 {% endblock %}
+
