--- a/templates/Staff/activity_public.html
+++ b/templates/Staff/activity_public.html
@@ -5,7 +5,7 @@
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h1 class="display-4">Activity Management - Public</h1>
         <a href="/activity-management/public/create" class="btn btn-success mr-3">
-            <i class="fas fa-plus mr-1"></i> Add Activity
+            <i class="fas fa-plus mr-1"></i> Create Activity
         </a>
     </div>
 
@@ -126,4 +126,5 @@
         </nav>
         {% endif %}
     </div>
+
 {% endblock %}
