--- a/templates/Staff/account_management.html
+++ b/templates/Staff/account_management.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 
-    <div class="d-flex justify-content-between align-items-center mb-3">
-        <h1 class="display-4">Manage Accounts</h1>
+    <div class="d-flex justify-content-between align-items-center mb-3 mt-4">
+        <h1>Manage Accounts</h1>
         <a href="{{ url_for('create_account') }}" class="btn btn-success mr-3">
             <i class="fas fa-plus mr-1"></i> Add Account
         </a>
