--- a/templates/Staff/product_management.html
+++ b/templates/Staff/product_management.html
@@ -16,7 +16,7 @@
     {% endif %}
 </div>
 
-<div>
+<div style="background-color: lightgray">
     <table class="table">
         <thead>
         <tr>
@@ -35,10 +35,15 @@
                 <td>{{ product.get_description() }}</td>
                 <td>{{ product.get_price() }}</td>
                 <td>
-                    <a href="{{ product.get_image_url() }}" target="_blank" class="btn btn-outline-primary btn-sm">
+                    <a href="{{ url_for('static', filename='storage/products/' + product.name + '.jpg') }}" target="_blank" class="btn btn-outline-primary btn-sm">
                         View Image
+<                   /a>
+                </td>
+                <td><a href="/product-management/{{product.get_product_id()}}" class="btn btn-warning px-3">
+                        <i class="fas fa-edit mr-1"></i>Edit
                     </a>
                 </td>
+                <td><a href="#" class="btn btn-warning">Delete</a></td>
             </tr>
             {% endfor %}
         </tbody>
