--- a/templates/Staff/product_update.html
+++ b/templates/Staff/product_update.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "Staff/Staff_base.html" %}
+{% block title %}SGEnable - Create Product Listing{% endblock %}
 
-</body>
-</html>
+{% block content %}
+{% from "includes/_formHelper.html" import render_field %}
+
+<div class="container mt-4">
+        <div class="card shadow">
+            <div class="card-body">
+                <h2 class="card-title">Update Product Listing</h2>
+                <form method="POST" action="">
+                    <div class="form-group">
+                        {{ render_field(form.product, class="form-control") }}
+                    </div>
+                    <div class="form-group">
+                        {{ render_field(form.description, class="form-control", rows="3") }}
+                    </div>
+                    <div class="form-group">
+                        {{ render_field(form.price, class="form-control") }}
+                    </div>
+                    <div class="form-group">
+                        {{ render_field(form.image_name, class="form-control") }}
+                    </div>
+
+                    <input type="submit" value="Create" class="btn btn-primary"/>
+                    <a href="{{ url_for('manage_product') }}" class="btn btn-secondary ml-2">Cancel</a>
+                </form>
+            </div>
+        </div>
+    </div>
+{% endblock %}
