--- a/templates/Staff/product_management.html
+++ b/templates/Staff/product_management.html
@@ -40,7 +40,7 @@
                     </a>
                 </td>
                 <td>
-                    <a href="/product-management/{{product.get_product_id()}}" class="btn btn-warning px-3">
+                    <a href="{{ url_for('update_product', id=product.get_product_id()) }}" class="btn btn-warning px-3">
                         <i class="fas fa-edit mr-1"></i>Edit
                     </a>
                 </td>
