--- a/templates/includes/staff_navbar.html
+++ b/templates/includes/staff_navbar.html
@@ -53,7 +53,7 @@
             <li class="nav-item {% if current_page == 'dashboard' %}active{% endif %}">
                 <a class="nav-link text-white" href="{{ url_for('dashboard') }}">Dashboard</a>
             </li>
-            <li class="nav-item {% if current_page == 'account_management' %}active{% endif %}">
+            <li class="nav-item text-center {% if current_page == 'account_management' %}active{% endif %}">
                 <a class="nav-link text-white" href="{{ url_for('manage_accounts') }}">Account
                     Management</a>
             </li>
