--- a/templates/Staff/product_management.html
+++ b/templates/Staff/product_management.html
@@ -16,15 +16,18 @@
     {% endif %}
 </div>
 
-<div style="background-color: lightgray">
-    <table class="table">
-        <thead>
+<div>
+    <table class="table table-bordered table-striped table-hover">
+        <caption>List of products</caption>
+        <thead class="thead-dark">
         <tr>
             <th>Product ID</th>
             <th>Product</th>
             <th>Description</th>
             <th>Price</th>
             <th>Image</th>
+            <th></th>
+            <th></th>
         </tr>
         </thead>
         <tbody>
@@ -44,7 +47,14 @@
                         <i class="fas fa-edit mr-1"></i>Edit
                     </a>
                 </td>
-                <td><a href="#" class="btn btn-warning">Delete</a></td>
+                <td>
+                    <form action="{{ url_for('delete_product',id=product.get_product_id())}}", method="POST">
+                    <button type="button" class="btn btn-danger">
+                            <i class="fas fa-trash-alt mr-1"></i>
+                            Delete
+                    </button>
+                    </form>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
