--- a/templates/includes/PWIDS_navbar.html
+++ b/templates/includes/PWIDS_navbar.html
@@ -75,12 +75,12 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-white" href="#" id="userDropdown" role="button"
                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Participant Name
+                    {{ session['user'] }} (PWID)
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                     <a class="dropdown-item" href="#">Profile</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{{ url_for('public_home') }}">Logout</a>
+                    <a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a>
                 </div>
             </li>
         </ul>
