--- a/templates/Public/donations.html
+++ b/templates/Public/donations.html
@@ -11,7 +11,7 @@
     <h2 class="mb-4">Browse Our Gifts</h2>
     <div class="row g-4">
         {% for product in product_list %}
-        <div class="col-md-4 ratio ratio-4x3" id="product-listing">
+        <div class="product-card col-md-4 ratio ratio-4x3" id="product-listing">
             <div class="card h-100">
                 <img class="h-50" src="{{ url_for('static', filename='images/products/' + product.get_image_name()) }}">
                 <div class="card-body">
